Refactor for new SSH library (#2866)